--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml" fx:controller="splendidworks.FXMLController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="678.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="splendidworks.FXMLController">
+       <children>
+      <Separator layoutX="264.0" layoutY="13.0" orientation="VERTICAL" prefHeight="376.0" prefWidth="140.0" />
+      <TextField fx:id="textfieldSignU" layoutX="482.0" layoutY="170.0" />
+      <Label layoutX="405.0" layoutY="174.0" text="Username" />
+      <TextField fx:id="textfieldSignP" layoutX="481.0" layoutY="235.0" />
+      <Label layoutX="404.0" layoutY="239.0" text="Password" /> 
+      <TextField fx:id="textfieldRegisterU" layoutX="116.0" layoutY="170.0" />
+      <Label layoutX="37.0" layoutY="174.0" text="Username" />
+      <TextField fx:id="textfieldRegisterP" layoutX="116.0" layoutY="235.0" />
+      <Label layoutX="38.0" layoutY="239.0" text="Password" />
+      <Button layoutX="493.0" layoutY="329.0" mnemonicParsing="false" text="Sign in" />
+      <Button layoutX="133.0" layoutY="329.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="Register" />
+      <Label layoutX="118.0" layoutY="69.0" text="Register">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="478.0" layoutY="69.0" text="Sign In">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+   </children>
+
 </AnchorPane>
