--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="678.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="splendidworks.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="678.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="splendidworks.FXMLController">
        <children>
       <Separator layoutX="264.0" layoutY="13.0" orientation="VERTICAL" prefHeight="376.0" prefWidth="140.0" />
       <TextField fx:id="textfieldSignU" layoutX="482.0" layoutY="170.0" />
@@ -18,8 +18,8 @@
       <Label layoutX="37.0" layoutY="174.0" text="Username" />
       <TextField fx:id="textfieldRegisterP" layoutX="116.0" layoutY="235.0" />
       <Label layoutX="38.0" layoutY="239.0" text="Password" />
-      <Button layoutX="493.0" layoutY="329.0" mnemonicParsing="false" text="Sign in" />
-      <Button layoutX="133.0" layoutY="329.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="Register" />
+      <Button fx:id="signBtn" layoutX="493.0" layoutY="329.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Sign in" />
+      <Button fx:id="registerBtn" layoutX="133.0" layoutY="329.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="73.0" text="Register" />
       <Label layoutX="118.0" layoutY="69.0" text="Register">
          <font>
             <Font size="24.0" />
