--- a/src/main/resources/fxml/NewNote.fxml
+++ b/src/main/resources/fxml/NewNote.fxml
@@ -3,21 +3,20 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="712.0" prefWidth="624.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="splendidworks.NewNoteController">
+<AnchorPane id="AnchorPane" prefHeight="478.0" prefWidth="337.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="splendidworks.NewNoteController">
     <stylesheets>
         <URL value="@/styles/newnote.css" />
     </stylesheets>
    <children>
-      <Label layoutX="42.0" layoutY="53.0" text="Note Title" />
-      <TextField layoutX="134.0" layoutY="49.0" />
-      <Label layoutX="42.0" layoutY="115.0" text="Image" />
-      <TextField layoutX="134.0" layoutY="111.0" />
-      <Label layoutX="42.0" layoutY="187.0" text="Note" />
-      <TextField layoutX="134.0" layoutY="183.0" prefHeight="381.0" prefWidth="362.0" />
-      <Button layoutX="338.0" layoutY="626.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="53.0" text="OK" />
-      <Button layoutX="444.0" layoutY="626.0" mnemonicParsing="false" text="Cancel" />
+      <TextField fx:id="noteNameTf" layoutX="18.0" layoutY="10.0" prefHeight="25.0" prefWidth="295.0" promptText="Insert Title..." />
+      <Button layoutX="18.0" layoutY="356.0" mnemonicParsing="false" onAction="#handleFileChooser" prefHeight="55.0" prefWidth="119.0" text="Choose a Picture..." />
+      <TextArea fx:id="noteTa" layoutX="18.0" layoutY="46.0" prefHeight="295.0" prefWidth="295.0" promptText="Your note..." />
+      <Button layoutX="203.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleButtonAction3" prefHeight="25.0" prefWidth="53.0" text="OK" />
+      <Button layoutX="260.0" layoutY="435.0" mnemonicParsing="false" text="Cancel" />
+      <Label fx:id="fileChooserLbl" layoutX="144.0" layoutY="356.0" prefHeight="55.0" prefWidth="170.0" wrapText="true" />
    </children>
 </AnchorPane>
