--- a/src/main/resources/fxml/SceneMain.fxml
+++ b/src/main/resources/fxml/SceneMain.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="755.0" prefWidth="910.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="splendidworks.SceneMainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="755.0" prefWidth="910.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="splendidworks.SceneMainController">
    <children>
       <GridPane layoutX="15.0" layoutY="7.0" prefHeight="668.0" prefWidth="910.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -30,8 +30,8 @@
                 <RowConstraints maxHeight="343.0" minHeight="10.0" prefHeight="334.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ImageView fx:id="imageView" fitHeight="332.0" fitWidth="457.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-                  <TextArea fx:id="noteTextArea" prefHeight="200.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <ImageView fx:id="imageView" fitHeight="332.0" fitWidth="591.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <TextArea fx:id="noteTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
                </children>
             </GridPane>
             <ListView fx:id="notesListView" maxHeight="1.7976931348623157E308" prefHeight="690.0" prefWidth="305.0" />
@@ -55,9 +55,9 @@
          </padding>
          <children>
             <Button fx:id="newBtn" mnemonicParsing="false" onAction="#handleButtonAction2" prefHeight="25.0" prefWidth="61.0" text="New" GridPane.halignment="CENTER" />
-            <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-            <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
-            <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
+            <Button mnemonicParsing="false" onAction="#editNoteAction" text="Update" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+            <Button mnemonicParsing="false" onAction="#editNoteAction" text="Delete" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+            <Button fx:id="logoutBtn" mnemonicParsing="false" onAction="#handleButtonAction2" text="Logout" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
          </children>
       </GridPane>
    </children>
