--- a/src/main/resources/fxml/SceneMain.fxml
+++ b/src/main/resources/fxml/SceneMain.fxml
@@ -2,7 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -30,11 +34,64 @@
                 <RowConstraints maxHeight="343.0" minHeight="10.0" prefHeight="334.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ImageView fx:id="imageView" fitHeight="332.0" fitWidth="591.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
                   <TextArea fx:id="noteTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <TabPane prefHeight="284.0" prefWidth="493.0" tabClosingPolicy="UNAVAILABLE">
+                    <tabs>
+                      <Tab text="Image">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <ImageView fx:id="imageView" fitHeight="289.0" fitWidth="577.0" layoutX="7.0" layoutY="6.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                    </tabs>
+                  </TabPane>
                </children>
             </GridPane>
-            <ListView fx:id="notesListView" maxHeight="1.7976931348623157E308" prefHeight="690.0" prefWidth="305.0" />
+            <TabPane maxHeight="653.0" maxWidth="313.0" minHeight="100.0" minWidth="100.0" prefHeight="653.0" prefWidth="305.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="All Notes">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="618.0" prefWidth="305.0">
+                           <children>
+                              <ListView fx:id="notesListView" layoutY="-2.0" maxHeight="1.7976931348623157E308" prefHeight="626.0" prefWidth="312.0" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                  <Tab text="Calendar">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <DatePicker fx:id="datepicker" layoutY="597.0" onAction="#handleCalendar" prefHeight="25.0" prefWidth="305.0" />
+                              <ListView fx:id="datepickerlist" layoutY="-1.0" prefHeight="599.0" prefWidth="311.0" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
+                  <Tab text="To Do">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <ListView fx:id="toDoListView" layoutY="-2.0" prefHeight="627.0" prefWidth="311.0" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
+                  <Tab text="By City">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <ListView fx:id="cityNamesListView" layoutY="-2.0" prefHeight="602.0" prefWidth="311.0" />
+                              <ChoiceBox fx:id="choice" layoutY="598.0" prefHeight="25.0" prefWidth="311.0" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
+              </tabs>
+            </TabPane>
          </children>
          <padding>
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
@@ -44,6 +101,7 @@
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -57,7 +115,8 @@
             <Button fx:id="newBtn" mnemonicParsing="false" onAction="#handleButtonAction2" prefHeight="25.0" prefWidth="61.0" text="New" GridPane.halignment="CENTER" />
             <Button mnemonicParsing="false" onAction="#editNoteAction" text="Update" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
             <Button mnemonicParsing="false" onAction="#editNoteAction" text="Delete" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
-            <Button fx:id="logoutBtn" mnemonicParsing="false" onAction="#handleButtonAction2" text="Logout" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
+            <Button fx:id="logoutBtn" mnemonicParsing="false" onAction="#handleButtonAction2" text="Logout" GridPane.columnIndex="4" GridPane.halignment="CENTER" />
+            <Button mnemonicParsing="false" onAction="#editNoteAction" text="Export" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
          </children>
       </GridPane>
    </children>
