--- a/src/main/resources/fxml/EditNote.fxml
+++ b/src/main/resources/fxml/EditNote.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -18,5 +19,7 @@
       <Button layoutX="203.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleButtonAction3" prefHeight="25.0" prefWidth="53.0" text="OK" />
       <Button layoutX="260.0" layoutY="435.0" mnemonicParsing="false" onAction="#closeButtonAction" text="Cancel" />
       <Label fx:id="fileChooserLbl" layoutX="144.0" layoutY="356.0" prefHeight="55.0" prefWidth="170.0" wrapText="true" />
+      <CheckBox fx:id="locationCheck" layoutX="21.0" layoutY="425.0" mnemonicParsing="false" selected="true" text="Location" />
+      <CheckBox fx:id="dateCheck" layoutX="21.0" layoutY="446.0" mnemonicParsing="false" selected="true" text="DateStamp" />
    </children>
 </AnchorPane>
