--- a/src/main/resources/fxml/SceneMain.fxml
+++ b/src/main/resources/fxml/SceneMain.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -86,6 +87,16 @@
                            <children>
                               <ListView fx:id="cityNamesListView" layoutY="-2.0" prefHeight="602.0" prefWidth="311.0" />
                               <ChoiceBox fx:id="choice" layoutY="598.0" prefHeight="25.0" prefWidth="311.0" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
+                  <Tab text="Search">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TextField fx:id="searchTextfield" layoutY="597.0" prefHeight="25.0" prefWidth="305.0" promptText="Search..." />
+                              <ListView fx:id="searchListView" layoutY="-1.0" prefHeight="599.0" prefWidth="311.0" />
                            </children>
                         </AnchorPane>
                     </content>
